--- a/Cube.csproj
+++ b/Cube.csproj
@@ -55,14 +55,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddPropertyPage.cs">
+    <Compile Include="DataSetWorker.cs" />
+    <Compile Include="DBCreater.cs" />
+    <Compile Include="DialogManager.cs" />
+    <Compile Include="Enter.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddPropertyPage.Designer.cs">
-      <DependentUpon>AddPropertyPage.cs</DependentUpon>
+    <Compile Include="Enter.Designer.cs">
+      <DependentUpon>Enter.cs</DependentUpon>
     </Compile>
-    <Compile Include="DataSetWorker.cs" />
-    <Compile Include="DialogManager.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,7 +88,11 @@
     <Compile Include="Models\Value.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SQLFactory.cs" />
     <Compile Include="SQLWorker.cs" />
+    <EmbeddedResource Include="Enter.resx">
+      <DependentUpon>Enter.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
