--- a/Cube.csproj
+++ b/Cube.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{88C500F7-1AD9-4F5D-8A71-953ED943B1DC}</ProjectGuid>
+    <ProjectGuid>{357387FE-193D-4DC7-965B-AC05368B6D37}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Cube</RootNamespace>
@@ -33,17 +33,22 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SolidWorks.Interop.cosworks">
+      <HintPath>SolidWorksDll\SolidWorks.Interop.cosworks.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="SolidWorks.Interop.sldworks">
-      <HintPath>1_ApiSw_Dll\SolidWorks.Interop.sldworks.dll</HintPath>
+      <HintPath>SolidWorksDll\SolidWorks.Interop.sldworks.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="SolidWorks.Interop.swconst">
-      <HintPath>1_ApiSw_Dll\SolidWorks.Interop.swconst.dll</HintPath>
+      <HintPath>SolidWorksDll\SolidWorks.Interop.swconst.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -55,39 +60,65 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="project2\sql\DBCreater.cs" />
-    <Compile Include="project2\util\DialogManager.cs" />
-    <Compile Include="project2\page\DBConnectionPage.cs">
+    <Compile Include="cells_db\model\ResearchResult.cs" />
+    <Compile Include="Entity\Body\BodyDrawer.cs" />
+    <Compile Include="Entity\Body\BodyParam.cs" />
+    <Compile Include="Entity\Cells\Cells.cs" />
+    <Compile Include="Entity\Cells\CellsDrawer.cs" />
+    <Compile Include="Form2.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="project2\page\DBConnectionPage.Designer.cs">
-      <DependentUpon>DBConnectionPage.cs</DependentUpon>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
-    <Compile Include="project2\page\DataViewPage.cs">
+    <Compile Include="cells_db\exception\SQLWorkerException.cs" />
+    <Compile Include="cells_db\model\Cell.cs" />
+    <Compile Include="cells_db\model\CellStructure.cs" />
+    <Compile Include="cells_db\model\CellType.cs" />
+    <Compile Include="cells_db\model\Constans.cs" />
+    <Compile Include="cells_db\model\Data.cs" />
+    <Compile Include="cells_db\model\Detail.cs" />
+    <Compile Include="cells_db\model\Material.cs" />
+    <Compile Include="cells_db\model\Property.cs" />
+    <Compile Include="cells_db\model\Value.cs" />
+    <Compile Include="cells_db\page\DataViewPage.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="project2\page\DataViewPage.Designer.cs">
+    <Compile Include="cells_db\page\DataViewPage.Designer.cs">
       <DependentUpon>DataViewPage.cs</DependentUpon>
     </Compile>
-    <Compile Include="project2\util\INIManager.cs" />
-    <Compile Include="project2\sql\ISQLWorker.cs" />
-    <Compile Include="project2\model\Cell.cs" />
-    <Compile Include="project2\model\CellStructure.cs" />
-    <Compile Include="project2\model\CellType.cs" />
-    <Compile Include="project2\model\Constans.cs" />
-    <Compile Include="project2\model\Data.cs" />
-    <Compile Include="project2\model\Detail.cs" />
-    <Compile Include="project2\model\Material.cs" />
-    <Compile Include="project2\model\Property.cs" />
-    <Compile Include="project2\model\Value.cs" />
+    <Compile Include="cells_db\page\DBConnectionPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="cells_db\page\DBConnectionPage.Designer.cs">
+      <DependentUpon>DBConnectionPage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="cells_db\sql\DBCreater.cs" />
+    <Compile Include="cells_db\sql\ISQLWorker.cs" />
+    <Compile Include="cells_db\sql\SQLWorker.cs" />
+    <Compile Include="cells_db\util\DialogManager.cs" />
+    <Compile Include="cells_db\util\INIManager.cs" />
+    <Compile Include="Research.cs" />
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="project2\sql\SQLWorker.cs" />
-    <EmbeddedResource Include="project2\page\DBConnectionPage.resx">
-      <DependentUpon>DBConnectionPage.cs</DependentUpon>
+    <Compile Include="SLDManager.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="project2\page\DataViewPage.resx">
+    <EmbeddedResource Include="Form2.resx">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="cells_db\page\DataViewPage.resx">
       <DependentUpon>DataViewPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="cells_db\page\DBConnectionPage.resx">
+      <DependentUpon>DBConnectionPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -110,6 +141,27 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="SolidWorksDll\PDMWorks.Interop.pdmworks.dll" />
+    <Content Include="SolidWorksDll\redist.txt" />
+    <Content Include="SolidWorksDll\SolidWorks.Interop.cosworks.dll" />
+    <Content Include="SolidWorksDll\SolidWorks.Interop.dsgnchk.dll" />
+    <Content Include="SolidWorksDll\SolidWorks.Interop.fworks.dll" />
+    <Content Include="SolidWorksDll\SolidWorks.Interop.gtswutilities.dll" />
+    <Content Include="SolidWorksDll\SolidWorks.Interop.sldcostingapi.dll" />
+    <Content Include="SolidWorksDll\SolidWorks.Interop.sldtoolboxconfigureaddin.dll" />
+    <Content Include="SolidWorksDll\SolidWorks.Interop.sldworks.dll" />
+    <Content Include="SolidWorksDll\SolidWorks.Interop.sustainability.dll" />
+    <Content Include="SolidWorksDll\SolidWorks.Interop.sw3dprinter.dll" />
+    <Content Include="SolidWorksDll\SolidWorks.Interop.swbrowser.dll" />
+    <Content Include="SolidWorksDll\SolidWorks.Interop.swcommands.dll" />
+    <Content Include="SolidWorksDll\SolidWorks.Interop.swconst.dll" />
+    <Content Include="SolidWorksDll\SolidWorks.Interop.swdimxpert.dll" />
+    <Content Include="SolidWorksDll\SolidWorks.Interop.swdocumentmgr.dll" />
+    <Content Include="SolidWorksDll\SolidWorks.Interop.swmotionstudy.dll" />
+    <Content Include="SolidWorksDll\SolidWorks.Interop.swpublished.dll" />
+    <Content Include="SolidWorksDll\SolidWorks.Interop.SWRoutingLib.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
